--- a/LittlePlanets.csproj
+++ b/LittlePlanets.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Branoscript.cs" />
     <Compile Include="Assets\Coords.cs" />
     <Compile Include="Assets\PlayerController.cs" />
+    <Compile Include="Assets\Runoscript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
